--- a/SistemaCadeteria/SistemaCadeteria.csproj
+++ b/SistemaCadeteria/SistemaCadeteria.csproj
@@ -1,9 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
-
+  <ItemGroup>
+    <PackageReference Include="SQLite" Version="3.13.0"/>
+    <PackageReference Include="SQLitePCLRaw.core" Version="2.1.2"/>
+    <PackageReference Include="SQLitePCLRaw.lib.e_sqlite3" Version="2.1.2"/>
+    <PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.1.2"/>
+    <PackageReference Include="SQLitePCLRaw.provider.e_sqlite3" Version="2.1.2"/>
+    <PackageReference Include="System.Data.SQLite" Version="1.0.116"/>
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="6.0.10"/>
+  </ItemGroup>
 </Project>
