--- a/SistemaCadeteria/SistemaCadeteria.csproj
+++ b/SistemaCadeteria/SistemaCadeteria.csproj
@@ -12,5 +12,7 @@
     <PackageReference Include="SQLitePCLRaw.provider.e_sqlite3" Version="2.1.2"/>
     <PackageReference Include="System.Data.SQLite" Version="1.0.116"/>
     <PackageReference Include="Microsoft.Data.Sqlite" Version="6.0.10"/>
+    <PackageReference Include="AutoMapper" Version="12.0.0"/>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0"/>
   </ItemGroup>
 </Project>
