--- a/SistemaCadeteria/SistemaCadeteria.csproj
+++ b/SistemaCadeteria/SistemaCadeteria.csproj
@@ -14,5 +14,6 @@
     <PackageReference Include="Microsoft.Data.Sqlite" Version="6.0.10"/>
     <PackageReference Include="AutoMapper" Version="12.0.0"/>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0"/>
+    <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.2.0"/>
   </ItemGroup>
 </Project>
