--- a/SistemaCadeteria/SistemaCadeteria.csproj
+++ b/SistemaCadeteria/SistemaCadeteria.csproj
@@ -4,11 +4,15 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
   <ItemGroup>
+
     <PackageReference Include="System.Data.SQLite" Version="1.0.116"/>
     <PackageReference Include="AutoMapper" Version="12.0.0"/>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0"/>
     <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.2.0"/>
     <PackageReference Include="Microsoft.Data.Sqlite" Version="7.0.0"/>
+    <PackageReference Include="NLog" Version="5.0.5"/>
+
   </ItemGroup>
 </Project>
